added apollo client code

--- a/client/package.json
+++ b/client/package.json
@@ -6,7 +6,9 @@
   "dependencies": {
     "@material-ui/core": "^1.4.0",
     "apollo-link-context": "^1.0.8",
+    "graphql-tag": "^2.9.2",
     "react": "^16.4.1",
+    "react-apollo": "^2.1.9",
     "react-dom": "^16.4.1",
     "react-scripts": "1.1.4"
   },
